<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fragment_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_btAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Add" />

            <Button
                android:id="@+id/id_btUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Update" />

            <Button
                android:id="@+id/id_btDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/id_textOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextOut" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>